# Warnetix-App

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  TODO.md  _head_model.joblib  generate_warnetix_assets.py  package-lock.json  package.json  railway.toml  requirements.txt
.venv310/: pyvenv.cfg
.venv310/Scripts/: activate  activate.bat
agent/: CMakeLists.txt  README.md
agent/config/: warnetix_engine.yaml
agent/include/: agent_config.h  entropy.h  hash_sha256.h  http_client.h  json_min.h  log.h  retry_queue.h  signature_fast.h  watcher_win.h
agent/include/core/: config.hpp  scan_archive.hpp  types.hpp
agent/include/readers/: IArchiveReader.hpp  ZipReader.hpp
agent/include/routing/: router.hpp
agent/scripts/: build.ps1
agent/src/: agent_config.cpp  entropy.cpp  hash_sha256.cpp  http_client_winhttp.cpp  json_min.cpp  main.cpp  retry_queue.cpp  signature_fast.cpp  watcher_win.cpp
agent/src/core/: config.cpp  scan_archive.cpp  stubs_link.cpp
agent/src/readers/: ZipReader.cpp
agent/src/routing/: router.cpp
backend/: .dockerignore  Dockerfile  Procfile  api.py  app.py  db.py  events_db.py  requirements.txt  scanner_api.py  vt_cache.db  vt_client.py  watcher.py
backend/data/: warnetix_corrupt_20250827_205446.db
backend/intel/: download.csv
backend/models/: anomaly_model_iforest_v2.joblib
backend/scanner_core/: README.md  __init__.py  feature_schema.json  merge_joblib_parts.py  model_loader.py  nlp_adv.py  scanner_core.py  virustotal.py  vt_client.py  warnetix_scanner.db
backend/signature/: malware_signatures.json
deploy/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  fly.toml  railway.toml  render.yaml
frontend/: .dockerignore  .env.production  Dockerfile  dashboard.py  nginx.conf  package-lock.json  package.json  vite.config.js
ml/: _quick_train_iforest.py
signature/: phishing_signatures.json  ransomware_signatures.json
tools/: db_check.py  ingest_kaggle_ransomware.py  ingest_mbz_csv.py  sig_counts.py  train_runtime_iforest.py  verify_anomaly_model.py
utils/: demo_seed.py  parser.py  requirements.txt
(+32 files in other folders)
